@@ -14,9 +14,8 @@ import static org.wildfly.extension.elytron._private.ElytronSubsystemMessages.RO
 import java.lang.reflect.Method;
 import java.security.PrivilegedActionException;
 import java.security.PrivilegedExceptionAction;
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Map;
+import java.util.Set;
 import java.util.function.Function;
 
 import org.jboss.as.controller.AbstractAddStepHandler;
@@ -92,7 +91,7 @@ class CustomComponentDefinition<C, T> extends SimpleResourceDefinition {
         private final Function<C, T> wrapper;
 
         private ComponentAddHandler(Class<C> serviceType, Function<C, T> wrapper, RuntimeCapability<?> ... runtimeCapabilities) {
-            super(new HashSet<>(Arrays.asList(runtimeCapabilities)), ATTRIBUTES);
+            super(Set.of(runtimeCapabilities));
             this.runtimeCapabilities = runtimeCapabilities;
             this.serviceType = serviceType;
             this.wrapper = wrapper;
